Adding new files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+		<title>How to create page preloader using jQuery</title>
+		<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1' />
+        
+        <link href='css/style.css' rel='stylesheet' type='text/css' />
+		
+		<!--jQuery-->
+        <script src="jquery.min.js" type="text/javascript"></script>
+        <script src="jquery.queryloader2.js" type="text/javascript"></script>
+        <script src="script.js" type="text/javascript"></script>
+    </head>
+
+    <body>
+		<!--HTML For jQuery Preloader-->
+        <div id="content">
+            <h1>jQuery Page Preloader</h1>
+            
+            <ul>
+                <li>
+                    <img src="http://placehold.it/300x300" />
+                </li>
+                <li>
+                    <img src="http://placehold.it/400x400" />
+                </li>
+                <li>
+                    <img src="http://placehold.it/250x250" />
+                </li>
+                <li class="gradient">
+                    Gradient test
+                </li>
+            </ul>
+        </div>
+    </body>
+</html>
